fix: fix weird rates wrapper behavior on smaller screens

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -35,7 +35,3 @@ a {
 html {
   height: 100%;
 }
-
-#root {
-  height: 100%;
-}
